--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
+    "serialize-javascript": ">=2.1.1",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
@@ -51,7 +52,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": ">=3.1.11",
     "webpack-bundle-analyzer": ">=3.3.2",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
